[package]
name = "file-action"
version = "0.1.0"
edition = "2024"
description = "A Rust utility library for file operations including reading/writing text, CSV, and JSON files"
license = "MIT"
repository = "https://github.com/yourusername/FileAction"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
